--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,16 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
+# Arduino build and temporary files
+*.elf
+*.hex
+*.bin
+*.eep
 *.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
 *.a
-*.lib
+*.bak
+*.tmp
+*.log
 
-# Executables
-*.exe
-*.out
-*.app
+# System files
+.DS_Store
+Thumbs.db
+desktop.ini
+
